# ChangeLog for www-servers/apache
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.64 2008/04/19 09:04:42 hollow Exp $

  19 Apr 2008; Benedikt Böhm <hollow@gentoo.org> -apache-2.2.8-r1.ebuild,
  apache-2.2.8-r2.ebuild:
  add mod_substitute wrt #218356

*apache-2.2.8-r2 (22 Mar 2008)

  22 Mar 2008; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.8-r2.ebuild:
  fix #110556, #209095, #212837

  17 Feb 2008; Christoph Mende <angelos@gentoo.org> apache-2.2.8.ebuild:
  Stable on amd64, security bug #205195

*apache-2.2.8-r1 (02 Feb 2008)

  02 Feb 2008; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.8-r1.ebuild:
  remove incremental mod_dir patches, fixes #139451

  31 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> apache-2.2.8.ebuild:
  ppc stable, bug #205195

  29 Jan 2008; Raúl Porcel <armin76@gentoo.org> apache-2.2.8.ebuild:
  alpha/ia64/sparc stable wrt security #205195

  29 Jan 2008; Christian Faulhammer <opfer@gentoo.org> apache-2.2.8.ebuild:
  stable x86, security bug 205195

  29 Jan 2008; Jeroen Roovers <jer@gentoo.org> apache-2.2.8.ebuild:
  Stable for HPPA (bug #205195).

  29 Jan 2008; Brent Baude <ranger@gentoo.org> apache-2.2.8.ebuild:
  Marking apache-2.2.8 ppc64 for bug 205195

  28 Jan 2008; Benedikt Böhm <hollow@gentoo.org> -apache-2.0.58-r2.ebuild,
  -apache-2.0.59-r5.ebuild, -apache-2.0.61.ebuild:
  remove apache-2.0 wrt #203578

*apache-2.2.8 (19 Jan 2008)

  19 Jan 2008; Benedikt Böhm <hollow@gentoo.org>
  -files/apache-2.2.6_CVE-2007-5000.patch, -apache-2.2.6-r5.ebuild,
  -apache-2.2.6-r6.ebuild, +apache-2.2.8.ebuild:
  version bump; cleanup

  12 Jan 2008; Benedikt Böhm <hollow@gentoo.org> apache-2.2.6-r7.ebuild:
  fix define for mod_status

  10 Jan 2008; Richard Freeman <rich0@gentoo.org> apache-2.2.6-r7.ebuild:
  amd64 stable - bug 204838

  08 Jan 2008; Jeroen Roovers <jer@gentoo.org> apache-2.2.6-r7.ebuild:
  Stable for HPPA (bug #204838).
